--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h2>I'm Developer Ugoji C. Mirabel</h2>
             <P>I am a qualified web developer, ready to bring your ideas to life</P>
             <a href=""><button id="learn" class="learn">Learn More</button></a>
-            <a href=""><button id="hire" class="hire">Hire Me</button></a>
+            <a href=""><button id="hire" class="hire">Hire Me.</button></a>
         </div>
 
         <div class="right">
